@@ -2074,6 +2074,12 @@ _BUILD_SLICE = _unimplemented
 
 _WITH_CLEANUP = _unimplemented
 
+# 2.7
+_POP_JUMP_IF_FALSE = _unimplemented
+_POP_JUMP_IF_TRUE = _unimplemented
+_JUMP_IF_FALSE_OR_POP = _unimplemented
+_JUMP_IF_TRUE_OR_POP = _unimplemented
+
 # dispatched from pychecker/warn.py
 DISPATCH = [ None ] * 256
 DISPATCH[  0] = _STOP_CODE
@@ -2160,16 +2166,37 @@ DISPATCH[100] = _LOAD_CONST
 DISPATCH[101] = _LOAD_NAME
 DISPATCH[102] = _BUILD_TUPLE
 DISPATCH[103] = _BUILD_LIST
-DISPATCH[104] = _BUILD_MAP
-DISPATCH[105] = _LOAD_ATTR
-DISPATCH[106] = _COMPARE_OP
-DISPATCH[107] = _IMPORT_NAME
-DISPATCH[108] = _IMPORT_FROM
+
+if utils.pythonVersion() >= utils.PYTHON_2_7:
+    DISPATCH[105] = _BUILD_MAP
+    DISPATCH[106] = _LOAD_ATTR
+    DISPATCH[107] = _COMPARE_OP
+    DISPATCH[108] = _IMPORT_NAME
+    DISPATCH[109] = _IMPORT_FROM
+else:
+    DISPATCH[104] = _BUILD_MAP
+    DISPATCH[105] = _LOAD_ATTR
+    DISPATCH[106] = _COMPARE_OP
+    DISPATCH[107] = _IMPORT_NAME
+    DISPATCH[108] = _IMPORT_FROM
+
 DISPATCH[110] = _JUMP_FORWARD
-DISPATCH[111] = _JUMP_IF_FALSE
-DISPATCH[112] = _JUMP_IF_TRUE
+
+if utils.pythonVersion() >= utils.PYTHON_2_7:
+    DISPATCH[111] = _POP_JUMP_IF_FALSE
+    DISPATCH[112] = _POP_JUMP_IF_TRUE
+else:
+    DISPATCH[111] = _JUMP_IF_FALSE
+    DISPATCH[112] = _JUMP_IF_TRUE
+
 DISPATCH[113] = _JUMP_ABSOLUTE
-DISPATCH[114] = _FOR_LOOP
+
+if utils.pythonVersion() >= utils.PYTHON_2_7:
+    DISPATCH[114] = _POP_JUMP_IF_FALSE
+    DISPATCH[115] = _POP_JUMP_IF_TRUE
+else:
+    DISPATCH[114] = _FOR_LOOP
+
 DISPATCH[116] = _LOAD_GLOBAL
 DISPATCH[119] = _CONTINUE_LOOP
 DISPATCH[120] = _SETUP_LOOP
@@ -2190,4 +2217,12 @@ DISPATCH[137] = _STORE_DEREF
 DISPATCH[140] = _CALL_FUNCTION_VAR
 DISPATCH[141] = _CALL_FUNCTION_KW
 DISPATCH[142] = _CALL_FUNCTION_VAR_KW
-DISPATCH[143] = _EXTENDED_ARG
+
+# changed from 143 to 145 in 2.7, because 143 is now _SETUP_WITH
+# Python svn revision 72912
+if utils.pythonVersion() < utils.PYTHON_2_7:
+    DISPATCH[143] = _EXTENDED_ARG
+else:
+    DISPATCH[145] = _EXTENDED_ARG
+
+# FIXME: implement SETUP_WITH 
